# topVenues

./: .env.example  .gitignore  ARTIFACT_README.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  REVIEWER_GUIDE.md  config.toml  config.yaml  docker-compose.yml  pyproject.toml  reproduce.sh  requirements-web.txt  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
data/: README.md
docs/: EXECUTION_GUIDE.md
evaluation/: README.md  __init__.py  audit_frozen_snapshot.py  build_source_evidence_bundle.py
evaluation/baseline_validation/: README.md  __init__.py  generate_sample.py  labeling_tool.html  manual_adjudication.csv  manual_labels.csv  manual_protocol.md  pending_corrections.csv  pilot_observations.csv  pilot_summary.json  run_live_baselines.py  sample.csv  summarize_manual_audit.py
evaluation/output/: abstract_provenance_evidence.csv  audit_summary.json  dedup_candidates.csv  input_manifest.csv
legacy/: AbstractCollector.R
scripts/: api_blitz.py  bibtex_blitz.py  early_signal_study.py  readiness_baselines.py  readiness_study.py  verify_claims.py  verify_extractors.py  verify_paper_claims.py
src/: __init__.py  abstract_fetcher.py  arxiv_fetcher.py  author_matcher.py  bibtex_dump.py  bibtex_fetcher.py  bibtex_local.py  cache.py  checkpoint.py  circuit_breaker.py  cli.py  collector.py  config.py  consolidator.py  database.py  downloader.py  event_normalizer.py  models.py  readiness.py  venue_config.py
src/extractors/: __init__.py  acm.py  base.py  ieee.py  ndss.py  usenix.py
tests/: test_arxiv_fetcher.py  test_author_matcher.py  test_bibtex_dump.py  test_bibtex_fetcher.py  test_bibtex_local.py  test_cache.py  test_cli.py  test_collector_helpers.py  test_consolidator.py  test_database.py  test_downloader.py  test_extractor_base.py  test_extractors.py  test_models.py  test_readiness.py
web/: app.py
